monitoring/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    k8s-app: prometheus
  ports:
  - protocol: TCP
    port: 9090
